--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -16,7 +16,7 @@
                         <label for="exampleInputPassword1">Password</label>
                         <input type="password" class="form-control" id="passwordlogin-input" placeholder="Password">
                     </div>
-                    <a href="#" type="submit" class="btn btn-default">Login</a>
+                    <a href="#" id="btnLogin" type="submit" class="btn btn-default">Login</a>
                     <a href="#" id="linkSignup" type="link">Sign up</a>
                 </form>
             </div>
