--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,7 +12,7 @@
 <div class="jumbotron text-center header-wrap" align="center">
     <h1><strong> <span id="arrow1">《</span> ChronoLogical <span id="arrow2"> 》</span></strong></h1>
 
-    <p><span id="subtitle">Create and Edit your Timelines!</span></p>
+    <p><span id="subtitle">Join in on the Fun!</span></p>
 </div> {{!-- end jumbotron --}}
 
 
