--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,35 +1,29 @@
+
 <div class="container">
-
-    {{!-- LOGIN CARD --}}
-    <div class="col-6 align-center">
-        <div id="login" class="card visible">
-            <div class="card-header">
-                <h2>Login</h2>
-            </div>
-            <div class="card-body">
-                <form class="login">
-                    <div class="form-group">
-                        <label for="exampleInputUsername1">Username</label>
-                        <input type="username" class="form-control" id="usernamelogin-input" placeholder="Username">
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleInputPassword1">Password</label>
-                        <input type="password" class="form-control" id="passwordlogin-input" placeholder="Password">
-                    </div>
-                    <a href="#" type="submit" class="btn btn-default">Login</a>
-                    <a href="#" id="linkSignup" type="link">Sign up</a>
-                </form>
-            </div>
+    <div class="row">
+        <div class="col-md-6">
+            <h2>Login Form</h2>
+            <form class="login" id = "login">
+                <div class="form-group">
+                    <label for="exampleInputUsername1">Username</label>
+                    <input type="username" class="form-control" id="usernamelogin-input" placeholder="Username">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputPassword1">Password</label>
+                    <input type="password" class="form-control" id="passwordlogin-input" placeholder="Password">
+                </div>
+                <button type="submit" class="btn btn-default">Login</button>
+            </form>
+            <br />
         </div>
-    </div>
+    {{!-- </div> --}}
+{{!-- </div> --}}
 
-    {{!-- SIGN UP CARD --}}
-    <div id="signup" class="card w-50 invisible">
-        <div class="card-header">
-            <h2>Sign Up</h2>
-        </div>
-        <div class="card-body">
-            <form class="signup">
+{{!-- <div class="container"> --}}
+    {{!-- <div class="row"> --}}
+        <div class="col-md-6">
+            <h2>Sign Up Form</h2>
+            <form class="signup" id = "signup">
                 <div class="form-group">
                     <label for="exampleInputEmail1">Email address</label>
                     <input type="email" class="form-control" id="email-input" placeholder="Email">
@@ -46,16 +40,16 @@
                     <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
                     <span class="sr-only">Error:</span> <span class="msg"></span>
                 </div>
-                <a href="#" id="linkSignupDone" type="submit" class="btn btn-default">Sign Up</a>
+                <button type="submit" class="btn btn-default">Sign Up</button>
             </form>
+            <br />
         </div>
     </div>
-
 </div>
 
 
 
-<script type="text/javascript">
+{{!-- <script type="text/javascript">
     $(document).ready(function () {
 
         if ($("#login").hasClass("visible")) {
@@ -73,4 +67,4 @@
         });
 
     });
-</script>
+</script> --}}
