--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,33 +1,4 @@
 
-<div class="container">
-    <div class="row">
-        <div class="col-md-6">
-            <h2>Login Form</h2>
-            <form class="login" id = "login">
-                <div class="form-group">
-                    <label for="exampleInputUsername1">Username</label>
-                    <input type="username" class="form-control" id="usernamelogin-input" placeholder="Username">
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control" id="passwordlogin-input" placeholder="Password">
-                </div>
-                <button type="submit" class="btn btn-default">Login</button>
-            </form>
-            <br />
-        </div>
-    {{!-- </div> --}}
-{{!-- </div> --}}
-
-{{!-- <div class="container"> --}}
-    {{!-- <div class="row"> --}}
-        <div class="col-md-6">
-            <h2>Sign Up Form</h2>
-            <form class="signup" id = "signup">
-                <div class="form-group">
-                    <label for="exampleInputEmail1">Email address</label>
-                    <input type="email" class="form-control" id="email-input" placeholder="Email">
-
 <div class="navbar">
     <h2>
         <a href="/">
@@ -45,94 +16,52 @@
     <p><span id="subtitle">Join in on the Fun!</span></p>
 </div> {{!-- end jumbotron --}}
 
-
-<div class="container loginIn">
+<div class="container">
     <div class="row">
-        <div class="col-md-1"></div>
-        <div class="col-md-5 loginCard">
-            {{!-- LOGIN CARD --}}
-            <div id="login" class="card visible">
-                <div class="card-header">
-                    <h2>Login</h2>
-
+        <div class="col-md-6">
+            <h2>Login Form</h2>
+            <form class="login" id = "login">
+                <div class="form-group">
+                    <label for="exampleInputUsername1">Username</label>
+                    <input type="username" class="form-control" id="usernamelogin-input" placeholder="Username">
                 </div>
-                <div class="card-body">
-                    <form class="login">
-                        <div class="form-group">
-                            <label for="exampleInputUsername1">Username</label>
-                            <input type="username" class="form-control" id="usernamelogin-input" placeholder="Username">
-                        </div>
-                        <div class="form-group">
-                            <label for="exampleInputPassword1">Password</label>
-                            <input type="password" class="form-control" id="passwordlogin-input" placeholder="Password">
-                        </div>
-                        <button type="submit" class="btn btn-outline-primary "><a href="#">Login</a></button>
-                        <button type="submit" class="btn btn-outline-primary "><a href="#" id="linkSignup">Sign Up</a></button>
-                    </form>
+                <div class="form-group">
+                    <label for="exampleInputPassword1">Password</label>
+                    <input type="password" class="form-control" id="passwordlogin-input" placeholder="Password">
                 </div>
-            </div>
+                <button type="submit" class="btn btn-default">Login</button>
+            </form>
+            <br />
         </div>
-        <div class="col-md-5 signUpCard">
+    
+
+<div class="col-md-5 signUpCard">
             {{!-- SIGN UP CARD --}}
-            <div id="signup" class="card invisible">
+            <div id="signup" class="card ">
                 <div class="card-header">
                     <h2>Sign Up</h2>
                 </div>
                 <div class="card-body">
-                    <form class="signup">
-                        <div class="form-group">
-                            <label for="exampleInputEmail1">Email address</label>
-                            <input type="email" class="form-control" id="email-input" placeholder="Email">
-                        </div>
-                        <div class="form-group">
-                            <label for="exampleInputUsername1">Username</label>
-                            <input type="username" class="form-control" id="username-input" placeholder="Username">
-                        </div>
-                        <div class="form-group">
-                            <label for="exampleInputPassword1">Password</label>
-                            <input type="password" class="form-control" id="password-input" placeholder="Password">
-                        </div>
-                        <div style="display: none" id="alert" class="alert alert-danger" role="alert">
-                            <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-                            <span class="sr-only">Error:</span> <span class="msg"></span>
-                        </div>
-                        <a href="#" id="linkSignupDone" type="submit" class="btn btn-default">Sign Up</a>
-                    </form>
+                   <form class="signup" id = "signup">
+                <div class="form-group">
+                    <label for="exampleInputEmail1">Email address</label>
+                    <input type="email" class="form-control" id="email-input" placeholder="Email">
                 </div>
-
+                <div class="form-group">
+                    <label for="exampleInputUsername1">Username</label>
+                    <input type="username" class="form-control" id="username-input" placeholder="Username">
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputPassword1">Password</label>
+                    <input type="password" class="form-control" id="password-input" placeholder="Password">
+                </div>
+                <div style="display: none" id="alert" class="alert alert-danger" role="alert">
+                    <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                    <span class="sr-only">Error:</span> <span class="msg"></span>
+                </div>
                 <button type="submit" class="btn btn-default">Sign Up</button>
             </form>
+                            
             <br />
         </div>
     </div>
-
-            </div>
-        </div>
- 
-
-    <div class="col-md-1"></div>
-</div> {{!-- end row --}}
-
-</div>
-
-
-
-{{!-- <script type="text/javascript">
-    $(document).ready(function () {
-
-        if ($("#login").hasClass("visible")) {
-            $("#signup").removeClass("visible").addClass("invisible");
-        };
-
-        $(document).on("click", "#linkSignup", function () {
-            $("#login").removeClass("visible").addClass("invisible");
-            $("#signup").removeClass("invisible").addClass("visible");
-        });
-
-        $(document).on("click", "#linkSignupDone", function () {
-            $("#signup").removeClass("visible").addClass("invisible");
-            $("#login").removeClass("invisible").addClass("visible");
-        });
-
-    });
-</script> --}}
