--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -6,7 +6,7 @@
             </svg>
         </a>
     </h2>
-    <a class="btn btn-primary" href="/index" role="button">Login | Sign Up</a>
+    <a class="btn btn-primary" href="/logout" role="button">Log Out</a>
 </div> {{!-- end navbar --}}
 
 <div class="jumbotron text-center header-wrap" align="center">
