--- a/views/mainpage.handlebars
+++ b/views/mainpage.handlebars
@@ -31,7 +31,7 @@
         <div class="col-md-5">
 
             <div id="publicTimelines">
-                <h1>Public Timelines</h1>
+                <h1>Timeline 1</h1>
                 {{!-- handlebars partial to render the public Timelines from database --}}
                 {{#each publicTimelines}}
                 {{> public-timelines}}
@@ -43,7 +43,7 @@
         {{!-- <div class="col-md-2"></div> --}}
         <div class="col-md-5">
             <div id="userTimelines">
-                <h1>Public Timelines</h1>
+                <h1>Timelines 2</h1>
                 {{#each publicTimelines}}
                 {{> user-timelines}}
                 {{/each}}
