--- a/views/mainpage.handlebars
+++ b/views/mainpage.handlebars
@@ -43,7 +43,7 @@
         {{!-- <div class="col-md-2"></div> --}}
         <div class="col-md-5">
             <div id="userTimelines">
-                <h1>Timelines 2</h1>
+                <h1>Timeline 2</h1>
                 {{#each publicTimelines}}
                 {{> user-timelines}}
                 {{/each}}
