--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,3 @@
-
 <div class="navbar">
     <h2>
         <a href="/">
@@ -19,49 +18,55 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6">
-            <h2>Login Form</h2>
-            <form class="login" id = "login">
-                <div class="form-group">
-                    <label for="exampleInputUsername1">Username</label>
-                    <input type="username" class="form-control" id="usernamelogin-input" placeholder="Username">
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control" id="passwordlogin-input" placeholder="Password">
-                </div>
-                <button type="submit" class="btn btn-default">Login</button>
-            </form>
-            <br />
-        </div>
-    
+            <div class="card">
 
-<div class="col-md-5 signUpCard">
+                <div class="card-header">
+                    <h2>Login</h2>
+                </div>
+                <div class="card-body">
+
+                    <form class="login" id="login">
+                        <div class="form-group">
+                            <label for="exampleInputUsername1">Username</label>
+                            <input type="username" class="form-control" id="usernamelogin-input" placeholder="Username">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">Password</label>
+                            <input type="password" class="form-control" id="passwordlogin-input" placeholder="Password">
+                        </div>
+                        <button type="submit" class="btn btn-outline-primary">Login</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+
+
+        <div class="col-md-5 signUpCard">
             {{!-- SIGN UP CARD --}}
             <div id="signup" class="card ">
                 <div class="card-header">
                     <h2>Sign Up</h2>
                 </div>
                 <div class="card-body">
-                   <form class="signup" id = "signup">
-                <div class="form-group">
-                    <label for="exampleInputEmail1">Email address</label>
-                    <input type="email" class="form-control" id="email-input" placeholder="Email">
+                    <form class="signup" id="signup">
+                        <div class="form-group">
+                            <label for="exampleInputEmail1">Email address</label>
+                            <input type="email" class="form-control" id="email-input" placeholder="Email">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputUsername1">Username</label>
+                            <input type="username" class="form-control" id="username-input" placeholder="Username">
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleInputPassword1">Password</label>
+                            <input type="password" class="form-control" id="password-input" placeholder="Password">
+                        </div>
+                        <div style="display: none" id="alert" class="alert alert-danger" role="alert">
+                            <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                            <span class="sr-only">Error:</span> <span class="msg"></span>
+                        </div>
+                        <button type="submit" class="btn btn-outline-primary">Sign Up</button>
+                    </form>
                 </div>
-                <div class="form-group">
-                    <label for="exampleInputUsername1">Username</label>
-                    <input type="username" class="form-control" id="username-input" placeholder="Username">
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control" id="password-input" placeholder="Password">
-                </div>
-                <div style="display: none" id="alert" class="alert alert-danger" role="alert">
-                    <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-                    <span class="sr-only">Error:</span> <span class="msg"></span>
-                </div>
-                <button type="submit" class="btn btn-default">Sign Up</button>
-            </form>
-                            
-            <br />
-        </div>
-    </div>
+            </div>
