padding on index

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -15,7 +15,7 @@
     <p><span id="subtitle">Join in on the Fun!</span></p>
 </div> {{!-- end jumbotron --}}
 
-<div class="container">
+<div class="container indexContainer">
     <div class="row">
         <div class="col-md-6">
             <div class="card">
@@ -42,7 +42,7 @@
 
 
 
-        <div class="col-md-5 signUpCard">
+        <div class="col-md-6 signUpCard">
             {{!-- SIGN UP CARD --}}
             <div id="signup" class="card ">
                 <div class="card-header">
