Fixed timelines on main page and linked dropdowns to user logged in

--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -71,7 +71,7 @@
                     <form id="eventForm">
                         <div class="form-group">
                             <label for="category">Select Timeline:</label>
-                            <select class="timeline-select" id="timeline">
+                            <select class="timeline-select" id="tl-create-event">
                                 {{!-- this is where the timelines will go --}}
                             </select>
                         </div>
