--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -88,11 +88,11 @@
                             <div class="row">
                                 <div class="col">
                                     <label for="startDate">Start Date</label>
-                                    <input class="form-control" id="startDate" placeholder="DD-MM-YYYY">
+                                    <input class="form-control" id="startDate" placeholder="YYYY-MM-DD">
                                 </div>
                                 <div class="col">
                                     <label for="endDate">End Date (optional) </label>
-                                    <input class="form-control" id="endDate" placeholder="DD-MM-YYYY">
+                                    <input class="form-control" id="endDate" placeholder="YYYY-MM-DD">
                                 </div>
                             </div>
                         </div>
